// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCard betaBadgeProps renders href 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard euiCard--centerAligned euiCard--hasBetaBadge emotion-euiPanel-grow-m-l-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
  <span
    class="euiCard__betaBadgeWrapper"
  >
    <a
      class="euiBetaBadge euiBetaBadge-isClickable euiBetaBadge--hollow euiCard__betaBadge"
      href="http://www.elastic.co/"
      id="generated-idBetaBadge"
      rel=""
      title="Link"
    >
      Link
    </a>
  </span>
</div>
`;

exports[`EuiCard horizontal selectable 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned euiCard--horizontal euiCard--isClickable euiCard--isSelectable euiCard--isSelectable--text emotion-euiPanel-grow-m-m-plain-hasShadow-isClickable"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
  <button
    aria-checked="false"
    aria-describedby="generated-idTitle generated-idDescription"
    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiCardSelect euiCardSelect--text"
    role="switch"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonEmpty__content"
    >
      <span
        class="euiButtonEmpty__text"
      >
        Select
      </span>
    </span>
  </button>
</div>
`;

exports[`EuiCard is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned testClass1 testClass2 emotion-euiPanel-grow-m-m-plain-hasShadow"
  data-test-subj="test subject string"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props a null icon 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props accepts div props like style 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow"
  style="min-width:0"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props children 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiCard__children"
    >
      Child
    </div>
  </div>
</div>
`;

exports[`EuiCard props children with description 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
    <div
      class="euiCard__children"
    >
      Child
    </div>
  </div>
</div>
`;

exports[`EuiCard props display accent is rendered 1`] = `
<div
  class="euiPanel euiPanel--accent euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-accent"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display danger is rendered 1`] = `
<div
  class="euiPanel euiPanel--danger euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-danger"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display plain is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display primary is rendered 1`] = `
<div
  class="euiPanel euiPanel--primary euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-primary"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display subdued is rendered 1`] = `
<div
  class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-subdued"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display success is rendered 1`] = `
<div
  class="euiPanel euiPanel--success euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-success"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display transparent is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-transparent"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display warning is rendered 1`] = `
<div
  class="euiPanel euiPanel--warning euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-warning"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props footer 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
  <div
    class="euiCard__footer"
  >
    <span>
      Footer
    </span>
  </div>
</div>
`;

exports[`EuiCard props hasBorder 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasBorder"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props horizontal 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned euiCard--horizontal emotion-euiPanel-grow-m-m-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props href supports href as a link 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned euiCard--isClickable emotion-euiPanel-grow-m-m-plain-hasShadow-isClickable"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <a
        aria-describedby="generated-idDescription"
        class="euiCard__titleAnchor"
        href="#"
        rel="noreferrer"
      >
        Hoi
      </a>
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        There
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props icon 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned euiCard--hasIcon emotion-euiPanel-grow-m-m-plain-hasShadow"
>
  <div
    class="euiCard__top"
  >
    <span
      class="myIconClass euiCard__icon"
      data-euiicon-type="apmApp"
    />
  </div>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props image 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow"
>
  <div
    class="euiCard__top"
  >
    <div
      class="euiCard__image"
    >
      <div>
        <img
          alt="Nature"
          src="https://source.unsplash.com/400x200/?Nature"
        />
      </div>
    </div>
  </div>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props isDisabled 1`] = `
<div
  class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiCard euiCard--centerAligned euiCard-isDisabled emotion-euiPanel-grow-m-m-subdued"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <button
        aria-describedby=" generated-idDescription"
        class="euiCard__titleButton"
        disabled=""
      >
        Card title
      </button>
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize l is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard euiCard--centerAligned emotion-euiPanel-grow-m-l-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize m is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize none is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiCard euiCard--centerAligned emotion-euiPanel-grow-m-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize s is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingSmall euiCard euiCard--centerAligned emotion-euiPanel-grow-m-s-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize xl is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiCard euiCard--centerAligned emotion-euiPanel-grow-m-xl-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize xs is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiCard euiCard--centerAligned emotion-euiPanel-grow-m-xs-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props selectable 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned euiCard--isClickable euiCard--isSelectable euiCard--isSelectable--text emotion-euiPanel-grow-m-m-plain-hasShadow-isClickable"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
  <button
    aria-checked="false"
    aria-describedby="generated-idTitle generated-idDescription"
    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiCardSelect euiCardSelect--text"
    role="switch"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonEmpty__content"
    >
      <span
        class="euiButtonEmpty__text"
      >
        Select
      </span>
    </span>
  </button>
</div>
`;

exports[`EuiCard props textAlign 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--rightAligned emotion-euiPanel-grow-m-m-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props titleElement 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <h4
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </h4>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props titleElement with nodes 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <h4
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Card title
    </h4>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props titleSize 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-xs"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;
